--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <header>
             <h1> Andrew Burnah </h1>
             <div class="link-container">
-                <a href="about-me.html">home</a>
+                <a href="index.html">home</a>
                 <a href="interests.html">interests</a>
                 <a href="projects.html">projects</a>
                 <a href="">CV</a>
