--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         </header>
         <main>
             <div class="console">
-                <p id="consoleOutput">Please enter a command</p>
+                <p id="consoleOutput">Ready</p>
                 <div class="inputline">
                     <p>></p>
                     <input type="text" id="command" onkeydown="handleEnter(event)" >
