lotsa fun stuff

--- a/projects.html
+++ b/projects.html
@@ -27,7 +27,7 @@
                         <ul>
                             <li><a href="https://chiazmus.github.io/wdd130/wwr/about.html">Rafting</a></li>
                             <li><a href="https://chiazmus.github.io/Game/">Button Manager</a></li>
-                            <li><a href="for-fun/duck-clicker.html">For Fun</a></li>
+                            <li><a href="for-fun/index.html">For Fun</a></li>
                         </ul>
                     </li>
                     <li>Games</li>
