--- a/for-fun/index.html
+++ b/for-fun/index.html
@@ -18,6 +18,10 @@
             <h2>Duck Clicker</h2>
             <a href="duck-clicker.html">🦆</a>
         </div>
+        <div class="link-container">
+            <h2>AI Blogger</h2>
+            <a href="">📝</a>
+        </div>
     </main>
     <footer>
         <h2>© 2025 Andrew Burnah. All rights reserved</h2>
