--- a/for-fun/index.html
+++ b/for-fun/index.html
@@ -18,6 +18,14 @@
             <h2>Duck Clicker</h2>
             <a href="duck-clicker.html">🦆</a>
         </div>
+        <div class="link-container">
+            <h2>Basic Interpreter</h2>
+            <a href="./code_editor/index.html">💻</a>
+        </div>
+        <div class="link-container">
+            <h2>Tiny Universe</h2>
+            <a href="./tinyUniverse/index.html">🌖</a>
+        </div>
     </main>
     <footer>
         <h2>© 2025 Andrew Burnah. All rights reserved</h2>
