--- a/for-fun/tinyUniverse/index.html
+++ b/for-fun/tinyUniverse/index.html
@@ -15,7 +15,7 @@
             <button onclick="genUniverse()">Generate Universe</button>
         </main>
         <footer>
-            © 2025 Andrew Burnah
+           <h2>© 2025 Andrew Burnah </h2>
         </footer>
         <script src="script.js"></script>
     </body>
