--- a/for-fun/gravofluidynamics/index.html
+++ b/for-fun/gravofluidynamics/index.html
@@ -3,16 +3,16 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <title>Tiny Universe</title>
+        <title>Gravofluidynamics</title>
         <link rel="stylesheet" href="styles.css">
     </head>
     <body>
         <header>
-            <h1>Tiny Universe</h1>
+            <h1>Gravofluidynamics</h1>
         </header>
         <main>
-            <canvas id="universeBox"></canvas>
-            <button onclick="genUniverse()">Generate Universe</button>
+            <canvas id="simulateBox"></canvas>
+            <button onclick="genSimulation()">Generate Gravofluidynamic Simulation</button>
         </main>
         <footer>
            <h2>© 2025 Andrew Burnah </h2>
