--- a/for-fun/index.html
+++ b/for-fun/index.html
@@ -23,8 +23,12 @@
             <a href="./code_editor/index.html">💻</a>
         </div>
         <div class="link-container">
-            <h2>Tiny Universe</h2>
-            <a href="./tinyUniverse/index.html">🌖</a>
+            <h2>Gravoflui-<br>dynamics</h2>
+            <a href="./gravofluidynamics/index.html">💧</a>
+        </div>
+        <div class="link-container">
+            <h2>Faster Than<br>Gossip</h2>
+            <a href="./faster-than-gossip/index.html">📰</a>
         </div>
     </main>
     <footer>
