--- a/for-fun/index.html
+++ b/for-fun/index.html
@@ -30,6 +30,10 @@
             <h2>Faster Than<br>Gossip</h2>
             <a href="./faster-than-gossip/index.html">📰</a>
         </div>
+        <div class="link-container">
+            <h2>Bussin Songs</h2>
+            <a href="./music-site/index.html">📰</a>
+        </div>
     </main>
     <footer>
         <h2>© 2025 Andrew Burnah. All rights reserved</h2>
