--- a/for-fun/music-site/sheet-music.html
+++ b/for-fun/music-site/sheet-music.html
@@ -5,19 +5,20 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="description" content="A site for the music of Andrew and William Burnah">
         <meta name="author" content="Andrew Burnah">
-        <title>Bussin Songs</title>
+        <title>Sheet Music</title>
         <link rel="stylesheet" href="styles.css">
-        <script src="script.js" defer></script>
+        <!-- <script src="sheet-music.js" defer></script> -->
     </head>
     <body>
         <header>
-            <h1>Bussin Songs</h1>
+            <h1>Sheet Music</h1>
             <nav>
                     <a href="index.html">Home</a>
                     <a href="sheet-music.html">Sheet Music</a>
             </nav>
         </header>
         <main id="song-list">
+            <h3 style="text-align: center;">Sorry!  No Songs have been added yet.</h3>
             <!-- Songs will be added here by JavaScript -->
         </main>
 
