--- a/for-fun/index.html
+++ b/for-fun/index.html
@@ -32,7 +32,7 @@
         </div>
         <div class="link-container">
             <h2>Bussin Songs</h2>
-            <a href="./music-site/index.html">📰</a>
+            <a href="./music-site/index.html">🎵</a>
         </div>
     </main>
     <footer>
