pdf download stuff

--- a/for-fun/music-site/sheet-music.html
+++ b/for-fun/music-site/sheet-music.html
@@ -7,7 +7,7 @@
         <meta name="author" content="Andrew Burnah">
         <title>Sheet Music</title>
         <link rel="stylesheet" href="styles.css">
-        <!-- <script src="sheet-music.js" defer></script> -->
+        <script src="sheet-music.js" defer></script>
     </head>
     <body>
         <header>
@@ -18,7 +18,7 @@
             </nav>
         </header>
         <main id="song-list">
-            <h3 style="text-align: center;">Sorry!  No Songs have been added yet.</h3>
+            <!-- <h3 style="text-align: center;">Sorry!  No Songs have been added yet.</h3> -->
             <!-- Songs will be added here by JavaScript -->
         </main>
 
