--- a/for-fun/cellular_automata/index.html
+++ b/for-fun/cellular_automata/index.html
@@ -19,8 +19,13 @@
 
         </canvas>
         <div class="buttons">
-            <button>Start</button>
+            <button id="startSim">start</button>
             <button id="switchSim">↪</button>
+        </div>
+        <div id="ruleIn">
+            <label for="text">Custom Rule:</label>
+            <input type="text" id="customRule" placeholder="3/23">
+            <button id="applyNew">apply</button>
         </div>
     </main>
     <footer>
