--- a/for-fun/index.html
+++ b/for-fun/index.html
@@ -34,6 +34,10 @@
             <h2>Bussin Songs</h2>
             <a href="./music-site/index.html">🎵</a>
         </div>
+        <div class="link-container">
+            <h2>Cellular Automata</h2>
+            <a href="./cellular_automata/index.html">🤖</a>
+        </div>
     </main>
     <footer>
         <h2>© 2025 Andrew Burnah. All rights reserved</h2>
