--- a/projects.html
+++ b/projects.html
@@ -25,13 +25,20 @@
                 <ul>
                     <li>Websites
                         <ul>
-                            <li><a href="https://chiazmus.github.io/wdd130/wwr/about.html">Rafting</a></li>
-                            <li><a href="https://chiazmus.github.io/Game/">Button Manager</a></li>
+                            <li><a href="https://chiazmus.github.io/money-tracker/">Money Tracker</a></li>
+                            <li><a href="https://chiazmus.github.io/guild-of-adventurers/">Guild of Adventurers</a></li>
                             <li><a href="for-fun/index.html">For Fun</a></li>
                         </ul>
                     </li>
                     <li>Games</li>
-                    <li>Programs</li>
+                    <ul>
+                        <li><a href="https://chiazmus.itch.io/kitten-kicker">Kitten Kicker (still in alpha testing)</a></li>
+                    </ul>
+                    <li>Programs
+                        <ul>
+                            <li><a href="https://github.com/chiazmus/completed-projects">Python Projects</a></li>
+                        </ul>
+                    </li>
                 </ul>
             </div>
         </main>
