about + year changes

--- a/index.html
+++ b/index.html
@@ -30,8 +30,8 @@
             </div>
         </main>
         <footer>
-            <p style="text-align: center;"> © Andrew Burnah 2025</p>
+            <p style="text-align: center;"> © Andrew Burnah <span id="fullYear"></span></p>
         </footer>
-              
+        <script type="module" src="scripts/getYear.js"></script>
     </body>
 </html>
