--- a/interests.html
+++ b/interests.html
@@ -7,7 +7,7 @@
         <link rel="stylesheet" href="styles/styles.css">
         <link rel="preconnect" href="https://fonts.googleapis.com">
         <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-        <link href="https://fonts.googleapis.com/css2?family=Kode+Mono:wght@400..700&display=swap" rel="stylesheet">  </head>  
+        <link href="https://fonts.googleapis.com/css2?family=Kode+Mono:wght@400..700&display=swap" rel="stylesheet"> 
     </head>
     <body>
         <header>
@@ -30,8 +30,8 @@
             </div>
         </main>
         <footer>
-            <p style="text-align: center;"> © Andrew Burnah 2025</p>
+            <p style="text-align: center;"> © Andrew Burnah <span id="fullYear"></span></p>
         </footer>
-              
+         <script type="module" src="scripts/getYear.js"></script>
     </body>
 </html>
